# cy-flask-aws-manager

./: .envrc  .gitattributes  .gitignore  LICENSE  README.md  broken.envrc  build.sh  package-lock.json  package.json  pyproject.toml  scratchspace.txt  version.sh  webpack.config.js
awsmgr/: autoapp.py  cli.py  config.py  wsgi.py
awsmgr/app/: __init__.py  aws_session.py  commands.py  utils.py
awsmgr/app/blueprints/boto/: __init__.py  commands.py
awsmgr/app/blueprints/boto/services/: __init__.py  dataclass.py
awsmgr/app/blueprints/ec2/: __init__.py
awsmgr/app/blueprints/lambdas/: __init__.py
awsmgr/app/blueprints/main/: __init__.py  routes.py
awsmgr/app/blueprints/pulumi/: __init__.py  commands.py  services.py
awsmgr/app/blueprints/pulumi/services/: __init__.py  dynamodb.py  ec2instance.py  s3bucket.py  setup_lambda.py
awsmgr/app/main/: __init__.py  routes.py
awsmgr/app/static/: README.md
awsmgr/app/templates/: base.html  footer.html  index.html
awsmgr/assets/css/: style.css
awsmgr/assets/js/: AppStream.jsx  ImageBuilder.jsx  main.js  script.js  version.js
awsmgr/flask_boto3/: __init__.py
