[tool.poetry]
name = "awsmgr"
version = "0.0.2"
description = ""
authors = ["Hagan Franks <224019+hagan@users.noreply.github.com>"]
readme = "README.md"

include = [
    "awsmgr/app/static/*.js",
    "awsmgr/app/static/build/*",
    "assets/img/favicon.ico",
]

[tool.poetry.scripts]
awsmgr = "awsmgr.cli:awsmgr"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-restful = "^0.3.10"
flask-bcrypt = "^1.0.1"
flask-caching = "^2.1.0"
flask-cors = "^4.0.0"
flask-static-digest = "^0.4.0"
flask-wtf = "^1.2.1"
jinja2 = "^3.1.2"
jsonschema = "^4.19.2"
flask-sqlalchemy = "^3.1.1"
markupsafe = "^2.1.3"
click = "^8.1.7"
greenlet = "^3.0.1"
itsdangerous = "^2.1.2"
python-dotenv = "^1.0.0"
pulumi = "^3.103.1"
pulumi-aws = "^6.18.2"
pulumi-awsx = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
